# yolo-project

./: .gitignore  pyproject.toml  tree.txt  used_sites.txt  özet.md
app/: cli.py  main.py  segmentation_main.py
app/inference/: Detection.py  YoloAnnotator.py  predictor.py  runSegment.py  segmentation.py  segmentator.py
app/legacy/: main.py
app/train/: trainer.py
app/utilities/: VideoProcessor.py  VideoReader.py  utils.py
configs/: default.yaml  predict.yaml  segmentation.yaml  train.yaml
yolo_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
