[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_project"
version = "0.3"
dependencies = [
    "requests",
    "fire==0.7.1",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "PyYAML==6.0.3",
    "ultralytics==8.4.37",
]

[project.scripts]
# This creates the 'yolo-app' command
app = "app.cli:main"

[tool.setuptools]
# This ensures all subfolders are included in the installation
packages = ["app", "app.inference", "app.train", "app.utilities"]
